--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>However, it is still very much possible to get involved. If you would like to be granted access, please send an email to <a href="mailto:gtavent@hushmail.com">gtavent@hushmail.com</a> with a quick note about who you are, why you'd like access, what you plan to contribute etc.</p>
 
-<p>If you do already have access, the project can be found <a href="https://github.com/gtav-ent/GTAV-EnhancedNativeTrainer">here</a>.</p>
+<p>If you do already have access, the project can be found <a href="https://github.com/gtav-ent/GTAV-EnhancedNativeTrainer">here</a>.</p> If you don't, you'll get a 404 error.
 
 <p>Apologies for having to provide this check, which is much more annoying for everyone than an open repository.</p>
 
