--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
 <p>This project is a trainer for GTAV, based on Alexander Blade's ScriptHook and original example, but by now having considerably extended it.</p>
 
-<p>This is intended to be a community project and was formerly open source in public view. Unfortunately this created a number of problems, necessitating a private repository. A number of other individuals and groups decided not to respect the minimal restrictions we had, namely that (a) if you fork the project, change the name, and (b) if you use the code, your work must be open source. It also meant that people were able to use our work to disrupt GTA:Online, which was not the intention. It is hoped that you will be responsible and not do the same.</p>
+<p>This is intended to be a community project and was formerly open source in public view. Unfortunately this created a number of problems, necessitating a private repository. A number of other individuals and groups decided not to respect the minimal restrictions we had, namely that (a) if you fork the project, change the name, and (b) if you use the code, your work must be open source.</p>
+
+<p>It also meant that people were able to use our work to disrupt GTA:Online, which was not the intention. I can't stop this without making the code completely private, but it's hoped that you will be responsible and not use it for this purpose.</p>
 
 <p>However, it is still very much possible to get involved. If you would like to be granted access, please send an email to <a href="mailto:gtavent@hushmail.com">gtavent@hushmail.com</a> with a quick note about who you are, why you'd like access, what you plan to contribute etc.</p>
 
-<p>If you do already have access, the project can be found <a href="https://github.com/gtav-ent/GTAV-EnhancedNativeTrainer">here</a>.</p> If you don't, you'll get a 404 error.
+<p>If you do already have access, the project can be found <a href="https://github.com/gtav-ent/GTAV-EnhancedNativeTrainer">here</a>. If you don't, you'll get a 404 error.</p>
 
 <p>Apologies for having to provide this check, which is much more annoying for everyone than an open repository.</p>
 
