--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>It also meant that people were able to use our work to disrupt GTA:Online, which was not the intention. I can't stop this without making the code completely private, but it's hoped that you will be responsible and not use it for this purpose.</p>
 
-<p>However, it is still very much possible to get involved. If you would like to be granted access, please send an email to <a href="mailto:gtavent@hushmail.com">gtavent@hushmail.com</a> with a quick note about who you are, why you'd like access, what you plan to contribute etc.</p>
+<p>However, it is still very much possible to get involved. If you would like to be granted access, please send an email to <a href="mailto:gtavent@hushmail.com">gtavent@hushmail.com</a> with a quick note about who you are, why you'd like access, what you plan to contribute etc. - please include your <b>GitHub username</b>.</p>
 
 <p>If you do already have access, the project can be found <a href="https://github.com/gtav-ent/GTAV-EnhancedNativeTrainer">here</a>. If you don't, you'll get a 404 error.</p>
 
